Ensure footer {strong}

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer id="footer">
 <a href="http://www.raiiar.com.ng">
 <font size="4" color="GREEN">
-Trasure-Data - Social Recipes &copy; <strong>It_Ddd - App Development - Another website designed by Julius Olatokunbo&nbsp;</strong></font>
+<strong>Trasure-Data - Social Recipes &copy; It_Ddd - App Development - Another website designed by Julius Olatokunbo&nbsp;</strong></font>
 </a>
 </footer>
